Raise z-index of slim-nav; fixes TP-1797

--- a/drupal/sites/all/themes/tp4/sass/modules/_header.scss
+++ b/drupal/sites/all/themes/tp4/sass/modules/_header.scss
@@ -273,7 +273,7 @@ header {
   height: auto;
   position: relative;
   overflow: visible;
-  z-index: 3;
+  z-index: 101;
 
   background-color: #fff;
   font-family: $primary-sans-font;
